--- a/Sources/Background.tex
+++ b/Sources/Background.tex
@@ -4,9 +4,9 @@
 \label{chap:background}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-The chapter sets the stage for the three typed calculi we are going to
-present in later chapters by reviewing some relevant topics in this thesis. In
-\cref{bg:sec:intersection} we start with the traditional formulation of
+The chapter sets the stage for the three typed calculi we are going to present
+in later chapters by expanding upon some relevant topics from the introduction.
+In \cref{bg:sec:intersection} we start with the traditional formulation of
 intersection types, followed by an introduction of the merge operator and the
 issue of coherence. We then review the \oname calculus, the first calculus
 featuring disjoint intersection types, and briefly discuss how disjointness
