--- a/Sources/Nested/typesystem.tex
+++ b/Sources/Nested/typesystem.tex
@@ -51,7 +51,7 @@ $[[ee : A]]$, singleton records $[[ {l = ee}]]$, and record selections $[[ee.l]]
 
 \begin{figure}[t]
   \centering
-  \drules[S]{$[[A <: B ~~> c]]$}{Declarative subtyping}{refl, trans, top, rcd, arr, andL, andR, and, distArr, topArr, distRcd, topRcd}
+  \drules[S]{$[[A <: B ~~> c]]$}{Declarative subtyping}{refl,trans,top,rcd,arr,andL,andR,and,topArr,topRcd,distArr,distRcd}
   \caption{Declarative specification of subtyping}
   \label{fig:subtype_decl}
 \end{figure}
