--- a/Sources/Coherence/coherence_poly.tex
+++ b/Sources/Coherence/coherence_poly.tex
@@ -4,16 +4,57 @@
 \label{chap:coherence:poly}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-In this chapter, we extend the proof technique introduced in
-\cref{chap:coherence:simple} to prove coherence for \fnamee. Firstly we review
-the parametric logical relation for System F~\citep{reynolds1983types} in
-\cref{sec:para:lr}. We then talk about a failed attempt on a natural extension
-to deal with disjoint intersection types in \cref{sec:failed:lr}. The technical
+In this chapter, we extend the canonicity logical relation introduced in
+\cref{chap:coherence:simple} to prove coherence for \fnamee. Firstly in
+\cref{sec:para:intuition} we discuss why adding BCD subtyping to disjoint
+polymorphism makes establishing coherence even challenging. We then review the
+parametric logical relation for System F~\citep{reynolds1983types} in
+\cref{sec:para:lr}, and talk about a failed attempt on a natural extension to
+deal with disjoint polymorphism in \cref{sec:failed:lr}. The technical
 difficulty is \textit{well-foundedness}, stemming from the interaction between
 impredicativity and disjointness. Finally in \cref{sec:succeed:lr}, we present
 our (predicative) logical relation that is specially crafted to prove coherence
-for \fnamee, and talk about a potential solution to lift the predicativity
-restriction.
+for \fnamee, and allude briefly to a potential solution to lift the
+predicativity restriction.
+
+
+\section{The Challenges}
+\label{sec:para:intuition}
+
+To have a better understanding at why adding BCD subtyping to disjoint
+polymorphism poses difficulties in terms of proving coherence, let us first
+understand how \fname retains coherence. In \fname it is of great importance to
+show that type system only produces \textit{well-formed} types. Recall the
+well-formedness rule for intersection types (\rref{wf-and}) in
+\cref{fig:lambdai}, which has a deep impact on the metatheory. For example, they
+need extra effort to prove a (weaker) substitution lemma, and also that
+disjointness between two types is preserved after substitution. To understand
+why the former is required, consider the judgment $[[ X ** nat |- X & nat ]]$.
+The type variable $[[X]]$ cannot be instantiated with arbitrary types, e.g.,
+substituting $[[X]]$ with $[[nat]]$ would lead to an ill-formed intersection
+type $[[nat & nat]]$. Therefore the range of types is narrowed down to those
+that respect the disjointness constraints---we have essentially a weaker
+substitution lemma. To motivate the latter, which is closely related to the
+former, consider the judgment $[[ X ** nat |- X ** nat ]]$. Obviously $[[X]]$
+cannot be instantiated with $[[nat]]$, either. Generally speaking,
+substitution-related lemmas are all weakened to account for disjointness
+conditions in \fname. All of these contribute to the single most important
+theorem: subtyping of \textit{well-formed} types produces \textit{unique} coercions.
+
+However for \fnamee, the well-formedness of intersection types (\rref{swft-and})
+in \cref{fig:well-formedness:fi} does not demand a disjointness premise. This
+implies that we now have a general substitution lemma, but also that the avenue
+taken by \citet{alpuimdisjoint} to prove coherence does not work anymore. In
+particular, subtyping does not necessarily produces unique coercions. For example,
+consider the possible coercions generated
+by $[[ \X ** nat . X & X  <: \X ** nat & nat . X ]]$. Neither of the types
+is ``well-formed'' in the sense of \fname. Two possible coercions are
+$[[   \f . \X . pp1 (f X)  ]]$ and $[[   \f . \X . pp2 (f X)  ]]$. It is not entirely obvious
+that these two are equivalent in some sense.
+Moreover, the addition of BCD subtyping aggravates the matter---i.e.,
+the subtyping relation becomes even more non-deterministic, producing more syntactically different coercions that are harder
+to argue to be equivalent. Clearly a better way to prove coherence is called for!
+Parametricity \`a la System F might give us some intuitions, as we will discuss below.
 
 
 \section{Review of the Parametric Logical Relation}
@@ -95,7 +136,7 @@ F, but also take care of disjointness constraints, as shown below.
                                                             & \quad [[R]] \subseteq [[C1]] \times [[C2]]. \\
                                                             & \quad [[ ( v1 |C1|, v2 |C2|) in E (B1 ; B2) with pq[X -> R]    ]]
 \end{align*}
-Compared with the one for System F, here we cannot pick arbitrary two types
+Compared with parametricity \`a la System F, here we cannot pick arbitrary two types
 except those that respect the disjointness constraints, due to the typing rule
 for type applications (\rref{FT-tapp}). Let us see an example in action to get a
 taste of how this definition works. Suppose $[[e]]$ is any expression
@@ -129,6 +170,8 @@ $[[v3]] = [[v2]]$ and $[[v4]] = [[v1]]$. So we have shown
   [[ e nat char <v1, v2> -->> v <v1, v2> ]] [[-->>]] [[  <v2, v1>  ]]
 \]
 
+\paragraph{The Problem with Type Variables.}
+
 Heterogeneity forces us to consider the case for
 $\valR{[[X]]}{[[A]]}$ where $[[A]] \neq [[X]]$. A seemingly innocuous definition
 is as follows:
@@ -157,8 +200,6 @@ It boils down to verifying the following:
 \]
 where the mapping $[[pq]]$ maps $[[X]]$ to a relation over integers. If we
 replace $[[X]]$ with $[[nat]]$ then the above holds obviously.
-
-
 Unfortunately, the seemingly innocuous definition for type variables has a serious
 issue with impredicativity---in other words, the relation in question is \textit{not well-founded}.
 We could pick a bad instantiation to make the relation ``go
@@ -199,13 +240,13 @@ as briefly discussed in \cref{sec:implicit}.
                                        & & $[[(v1, v2) in V (A; B)]]$
   \end{tabular}
   \end{small}
-  \caption{Logical relation for \fnamee}
+  \caption{The canonicity logical relation for \fnamee}
   \label{fig:logical:fi}
 \end{figure}
 
 Substitution with predicative instantiations does not prevent well-foundedness.
 \Cref{fig:logical:fi} presents the logical relation for \fnamee. We extend the
-logical relation in \cref{fig:logical} with a new clause (highlighted) for
+canonicity logical relation in \cref{fig:logical} with a new clause (highlighted) for
 disjoint quantification. Notice that it does not quantify over arbitrary
 relations, which means that our logical relation \textit{does not} imply
 parametricity, and in particular, \cref{thm:free} is impossible to prove using
@@ -298,6 +339,15 @@ free type and term variables.
 \end{figure}
 
 
+
+\begin{figure}
+  \centering
+\drules[FCTyp]{$[[ CC : ( DD ; GG => A ) ~> ( DD' ; GG' => B ) ~~> cc ]]$}{Context typing I}{emptyOne, appLOne, appROne, mergeLOne, mergeROne, rcdOne, projOne, annoOne, tabsOne, tappOne}
+\caption{\fnamee context typing (excerpt)}
+\label{fig:fctyp}
+\end{figure}
+
+
 To define the contextual equivalence, we must define the expression contexts for
 \fnamee and \tnamee, which are shown in \cref{fig:contexts:fi} (highlighted for
 the differences from \namee contexts). The typing judgment of
@@ -308,7 +358,7 @@ the differences from \namee contexts). The typing judgment of
   [[CC : (DD; GG => A) ~> (DD'; GG' <= A') ~~> cc]] \and
   [[CC : (DD; GG <= A) ~> (DD'; GG' <= A') ~~> cc]]
 \end{mathpar}
-The full typing rules are similar to \cref{fig:ctyp} and appear in \cref{appendix:fi}.
+\Cref{fig:fctyp} shows one form of rules. The full typing rules appear in \cref{appendix:fi}.
 Now we may give the definition of contextual equivalence for \fname as follows:
 
 \begin{definition}[\fnamee Contextual Equivalence]
