--- a/Sources/Poly/typesystem.tex
+++ b/Sources/Poly/typesystem.tex
@@ -53,7 +53,7 @@ Our well-formedness judgments for types and contexts in
 difference from \fname. The \fname calculus follows \oname where they add a
 disjointness condition $[[ A ** B ]]$ in \rref{swft-and}. This is crucial for
 them to ensure coherence due to their syntactic proof method, it also
-complicates the metatheory a lot with extra efforts required to show that all
+complicates the metatheory a lot with extra effort required to show that all
 types in \fname are well-formed. In particular, they only have a weaker version
 of the substitution lemma, shown in \cref{lemma:weaker_lemma}: the general
 substitution lemma as shown in \cref{lemma:general_lemma} does not hold in
