--- a/Sources/Traits.tex
+++ b/Sources/Traits.tex
@@ -6,8 +6,8 @@
 
 In this chapter and \cref{chap:case_study}, we present two applications of
 \fnamee. This chapter is concerned with building a source-level language named
-\sedel that features \textit{typed first-class traits}. In particular we show
-how to model source-level constructs for first-class traits and dynamic
+\sedel that features \textit{typed first-class traits}, \textit{nested composition}, among others.
+We show how to model source-level constructs for first-class traits and dynamic
 inheritance, supporting standard object-oriented features such as dynamic
 dispatching and abstract methods. It is remarkable that all of these can be
 explained by plain \fnamee expressions, showing its expressive power.
