--- a/Sources/Coherence/coherence_simple.tex
+++ b/Sources/Coherence/coherence_simple.tex
@@ -69,7 +69,7 @@ Firstly, with the new proof method, several restrictions that were enforced by
 aforementioned \emph{top-like types} are not necessary; top-like types are
 handled like all other types. Secondly, the new proof method is more powerful
 because it is based on observational equivalence rather than syntactic equality;
-it is more robust with respect to extensions. Finally, the removal of the
+it is more robust as the type system is extended. Finally, the removal of the
 ad-hoc side-conditions makes adding new extensions, such as support for
 BCD-style subtyping, easier. A complicating factor is that not one, but two
 languages are involved: the source language and the target language. In order to
