--- a/Sources/Nested.tex
+++ b/Sources/Nested.tex
@@ -4,7 +4,7 @@
 \label{chap:nested}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-This chapter presents \namee\footnote{It was also called \name in the original publication~\citep{bi_et_al:LIPIcs:2018:9227}.}, a calculus based on \oname~\citep{oliveira2016disjoint} with disjoint intersection types that
+This chapter presents \namee~\footnote{It was also called \name in the original publication~\citep{bi_et_al:LIPIcs:2018:9227}.}, a calculus based on \oname~\citep{oliveira2016disjoint} with disjoint intersection types that
 features both BCD-style subtyping and the merge operator, which we believe
 captures the essence of nested composition. We illustrate this by presenting a
 solution to the expression problem based on family polymorphism. We then discuss
