--- a/Sources/Conclusion.tex
+++ b/Sources/Conclusion.tex
@@ -14,12 +14,12 @@ increasing expressiveness:
   and a powerful subtyping relation. We have shown that it captures the essence
   of nested composition, enabling a simple solution to the expression problem.
   In order to prove coherence, we have introduced a powerful proof method called
-  canonicity based on logical relations.
+  the canonicity relation based on logical relations.
 \item The \fnamee calculus, building on \namee, supports parametric
   polymorphism. We have shown that it can express a very dynamic (and
   conflict-free) form of composition, which could serve as a foundation for more
   sophisticated compositional models. We have also extended the canonicity
-  logical relation to establish coherence property of \fnamee.
+  relation to establish coherence property of \fnamee.
 \item \sedel---an object-oriented language design---building on \fnamee,
   supports, among others, typed first traits. Through a case study, we have
   shown the usefulness of \fnamee in building highly reusable software
